--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     por favor sigue estos pasos:
   </p>
   <ol>
-    <li>Envía un correo electrónico a <a href="mailto:soporte@tudominio.com">soporte@tudominio.com</a>
+    <li>Envía un correo electrónico a <a href="mailto:developp0nzer@gmail.com">soporte@tudominio.com</a>
     desde la misma dirección con la que creaste tu cuenta.</li>
     <li>Incluye en el asunto: <strong>Eliminar mi cuenta</strong>.</li>
     <li>Tu solicitud será procesada en un plazo máximo de 7 días hábiles.</li>
